# hvc-gasfles

./: .env-example  .gitignore  Dockerfile  Dockerfile.dockerignore  docker-compose.yml  process_stream.py  process_stream_only.py  pyproject.toml  readme.md  requirements.txt  utils.py
notebooks/: preprocessing.ipynb
